--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,13 +38,13 @@ jobs:
         id: pmd-scan
         run: |
           mkdir -p reports
-          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f text > reports/pmd-results.txt
+          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f text > reports/pmd-results.csv
 
           echo "---- PMD OUTPUT ----"
-          cat reports/pmd-results.txt
+          cat reports/pmd-results.csv
 
           # Check if the file is non-empty (indicating violations)
-          if [ -s reports/pmd-results.txt ]; then
+          if [ -s reports/pmd-results.csv ]; then
             echo "PMD violations found!"
             exit 1
           else
@@ -56,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: pmd-report
-          path: reports/pmd-results.txt
+          path: reports/pmd-results.csv
 
   deploy-prod-jwt:
     needs: pmd-run
