--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         id: pmd-scan
         run: |
           mkdir -p reports
-          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f text > reports/pmd-results.csv
+          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv -Dreportfile.header=true > reports/pmd-results.csv
 
           echo "---- PMD OUTPUT ----"
           cat reports/pmd-results.csv
