--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,25 +38,31 @@ jobs:
         id: pmd-scan
         run: |
           mkdir -p reports
-          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv -Dreportfile.header=true > reports/pmd-results.csv -property problem=true
 
-          echo "---- PMD OUTPUT ----"
-          cat reports/pmd-results.csv
+          echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
 
-          # Check if the file is non-empty (indicating violations)
-          if [ -s reports/pmd-results.csv ]; then
-            echo "PMD violations found!"
-            exit 1
+          echo "🔍 Checking for source files to analyze..."
+          if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
+            echo "⚠️ No .cls files found in ./force-app/main/default/classes"
           else
-            echo "No PMD violations."
+            echo "✅ Found Apex files:"
+            find ./force-app/main/default/classes -type f -name '*.cls'
           fi
 
-      - name: Upload PMD report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: pmd-report
-          path: reports/pmd-results.csv
+          echo "🚀 Running PMD scan..."
+          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
+
+          echo "📄 PMD output:"
+          cat reports/pmd-results.csv || echo "⚠️ No report generated!"
+
+          echo "🔎 Checking for violations..."
+          line_count=$(wc -l < reports/pmd-results.csv)
+          if [ "$line_count" -gt 1 ]; then
+            echo "❌ PMD violations found!"
+            exit 1
+          else
+            echo "✅ No PMD violations."
+          fi
 
   deploy-prod-jwt:
     needs: pmd-run
