--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,16 +39,16 @@ jobs:
       run: |
         mkdir -p reports
 
-        echo "🔍 Checking for source files to analyze..."
+        echo "Checking for source files to analyze..."
         if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-          echo "⚠️ No .cls files found in ./force-app/main/default/classes"
+          echo "No .cls files found in ./force-app/main/default/classes"
           # Still create empty file so upload step doesn't fail
           echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
         else
-          echo "✅ Found Apex files:"
+          echo "Found Apex files:"
           find ./force-app/main/default/classes -type f -name '*.cls'
 
-          echo "🚀 Running PMD scan..."
+          echo "Running PMD scan..."
           ~/pmd/bin/run.sh pmd \
             -d ./force-app/main/default/classes \
             -R pmd/pmd-ruleset.xml \
@@ -57,16 +57,16 @@ jobs:
             --report-file reports/pmd-results.csv
         fi
 
-        echo "📄 PMD report content:"
-        cat reports/pmd-results.csv || echo "⚠️ No report generated!"
+        echo "PMD report content:"
+        cat reports/pmd-results.csv || echo "No report generated!"
 
-        echo "🔎 Checking for violations..."
+        echo "Checking for violations..."
         line_count=$(wc -l < reports/pmd-results.csv)
         if [ "$line_count" -gt 1 ]; then
-          echo "❌ PMD violations found!"
+          echo "PMD violations found!"
           exit 1
         else
-          echo "✅ No PMD violations."
+          echo "No PMD violations."
         fi
 
 
