--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,40 +35,37 @@ jobs:
           ~/pmd/bin/run.sh pmd --version
 
       - name: Run PMD scan and fail on violations
-      id: pmd-scan
-      run: |
-        mkdir -p reports
+        id: pmd-scan
+        run: |
+          mkdir -p reports
 
-        echo "Checking for source files to analyze..."
-        if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-          echo "No .cls files found in ./force-app/main/default/classes"
-          # Still create empty file so upload step doesn't fail
-          echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
-        else
-          echo "Found Apex files:"
-          find ./force-app/main/default/classes -type f -name '*.cls'
+          echo "hecking for Apex files..."
+          if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
+            echo "No .cls files found to scan."
+            touch reports/pmd-results.csv
+          else
+            echo "Apex files found:"
+            find ./force-app/main/default/classes -type f -name '*.cls'
 
-          echo "Running PMD scan..."
-          ~/pmd/bin/run.sh pmd \
-            -d ./force-app/main/default/classes \
-            -R pmd/pmd-ruleset.xml \
-            -f csv \
-            --force-language apex \
-            --report-file reports/pmd-results.csv
-        fi
+            echo "Running PMD..."
+            ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes \
+              -R pmd/pmd-ruleset.xml \
+              -f csv \
+              --force-language apex \
+              --report-file reports/pmd-results.csv
+          fi
 
-        echo "PMD report content:"
-        cat reports/pmd-results.csv || echo "No report generated!"
+          echo "PMD report content:"
+          cat reports/pmd-results.csv || echo "No PMD output file!"
 
-        echo "Checking for violations..."
-        line_count=$(wc -l < reports/pmd-results.csv)
-        if [ "$line_count" -gt 1 ]; then
-          echo "PMD violations found!"
-          exit 1
-        else
-          echo "No PMD violations."
-        fi
-
+          line_count=$(wc -l < reports/pmd-results.csv)
+          if [ "$line_count" -gt 1 ]; then
+            echo "PMD violations found!"
+            exit 1
+          else
+            echo "No PMD violations."
+          fi
+          
 
 
   deploy-prod-jwt:
