--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,25 +39,23 @@ jobs:
         run: |
           mkdir -p reports
 
-          echo "hecking for Apex files..."
-          if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-            echo "No .cls files found to scan."
-            touch reports/pmd-results.csv
-          else
-            echo "Apex files found:"
-            find ./force-app/main/default/classes -type f -name '*.cls'
+          echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
 
-            echo "Running PMD..."
-            ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes \
-              -R pmd/pmd-ruleset.xml \
-              -f csv \
-              --force-language apex \
-              --report-file reports/pmd-results.csv
+          echo "🔍 Checking for source files to analyze..."
+          if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
+            echo "No .cls files found in ./force-app/main/default/classes"
+          else
+            echo "Found Apex files:"
+            find ./force-app/main/default/classes -type f -name '*.cls'
           fi
 
-          echo "PMD report content:"
-          cat reports/pmd-results.csv || echo "No PMD output file!"
+          echo "Running PMD scan..."
+          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
 
+          echo "PMD output:"
+          cat reports/pmd-results.csv || echo "⚠️ No report generated!"
+
+          echo "Checking for violations..."
           line_count=$(wc -l < reports/pmd-results.csv)
           if [ "$line_count" -gt 1 ]; then
             echo "PMD violations found!"
@@ -65,8 +63,6 @@ jobs:
           else
             echo "No PMD violations."
           fi
-          
-
 
   deploy-prod-jwt:
     needs: pmd-run
