--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
   pmd-run:
     runs-on: ubuntu-latest
     outputs:
-      result: ${{ steps.check-outcome.outcome }}
+      result: ${{ steps.pmd-scan.outcome }}
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
@@ -39,30 +39,41 @@ jobs:
         run: |
           mkdir -p reports
 
-          echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
-
           echo "🔍 Checking for source files to analyze..."
           if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-            echo "No .cls files found in ./force-app/main/default/classes"
+            echo "⚠️ No .cls files found."
+            echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
           else
-            echo "Found Apex files:"
+            echo "✅ Apex files found:"
             find ./force-app/main/default/classes -type f -name '*.cls'
+
+            echo "🚀 Running PMD scan..."
+            ~/pmd/bin/run.sh pmd \
+              -d ./force-app/main/default/classes \
+              -R pmd/pmd-ruleset.xml \
+              -f csv \
+              --force-language apex \
+              --report-file reports/pmd-results.csv
           fi
 
-          echo "Running PMD scan..."
-          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
+          echo "📄 PMD report content:"
+          cat reports/pmd-results.csv || echo "⚠️ Report not found."
 
-          echo "PMD output:"
-          cat reports/pmd-results.csv || echo "No report generated!"
-
-          echo "Checking for violations..."
+          echo "🔎 Checking for violations..."
           line_count=$(wc -l < reports/pmd-results.csv)
           if [ "$line_count" -gt 1 ]; then
-            echo "PMD violations found!"
+            echo "❌ PMD violations found!"
             exit 1
           else
-            echo "No PMD violations."
+            echo "✅ No PMD violations."
           fi
+
+      - name: Upload PMD report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pmd-report
+          path: reports/pmd-results.csv
 
   deploy-prod-jwt:
     needs: pmd-run
