--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,16 @@ on:
         description: 'Run the deployment as validation only'
         type: boolean
         default: false
+      pmdRequired:
+        description: 'Require PMD scan to pass before deployment?'
+        type: boolean
+        default: true
 
 jobs:
   pmd-run:
     runs-on: ubuntu-latest
     outputs:
-      result: ${{ steps.pmd-scan.outcome }}
+      pmd_status: ${{ steps.pmd-scan.outcome }}
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
@@ -39,12 +43,12 @@ jobs:
         run: |
           mkdir -p reports
 
-          echo "🔍 Checking for source files to analyze..."
+          echo "🔍 Checking for source files..."
           if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
             echo "⚠️ No .cls files found."
             echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
           else
-            echo "✅ Apex files found:"
+            echo "✅ Found Apex files:"
             find ./force-app/main/default/classes -type f -name '*.cls'
 
             echo "🚀 Running PMD scan..."
@@ -56,16 +60,16 @@ jobs:
               --report-file reports/pmd-results.csv
           fi
 
-          echo "📄 PMD report content:"
-          cat reports/pmd-results.csv || echo "⚠️ Report not found."
+          echo "📄 PMD output:"
+          cat reports/pmd-results.csv || echo "⚠️ No report!"
 
           echo "🔎 Checking for violations..."
           line_count=$(wc -l < reports/pmd-results.csv)
           if [ "$line_count" -gt 1 ]; then
-            echo "❌ PMD violations found!"
+            echo "❌ Violations found."
             exit 1
           else
-            echo "✅ No PMD violations."
+            echo "✅ No violations."
           fi
 
       - name: Upload PMD report
@@ -78,7 +82,12 @@ jobs:
   deploy-prod-jwt:
     needs: pmd-run
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.environment == 'integrate-sandbox' }}
+    if: |
+      github.event.inputs.environment == 'integrate-sandbox' &&
+      (
+        github.event.inputs.pmdRequired == 'false' ||
+        (github.event.inputs.pmdRequired == 'true' && needs.pmd-run.result == 'success')
+      )
     steps:
       - uses: actions/checkout@v3
 
