--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ on:
         type: boolean
         default: false
       pmdRequired:
-        description: 'Require PMD scan to pass before deployment?'
+        description: 'Block deployment if PMD fails'
         type: boolean
         default: true
 
@@ -25,7 +25,7 @@ jobs:
   pmd-run:
     runs-on: ubuntu-latest
     outputs:
-      pmd_status: ${{ steps.pmd-scan.outcome }}
+      pmd_status: ${{ steps.set-result.outputs.status }}
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
@@ -42,34 +42,29 @@ jobs:
         id: pmd-scan
         run: |
           mkdir -p reports
+          echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
 
-          echo "🔍 Checking for source files..."
+          echo "🔍 Checking for source files to analyze..."
           if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-            echo "⚠️ No .cls files found."
-            echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
+            echo "⚠️ No .cls files found in ./force-app/main/default/classes"
           else
             echo "✅ Found Apex files:"
             find ./force-app/main/default/classes -type f -name '*.cls'
-
-            echo "🚀 Running PMD scan..."
-            ~/pmd/bin/run.sh pmd \
-              -d ./force-app/main/default/classes \
-              -R pmd/pmd-ruleset.xml \
-              -f csv \
-              --force-language apex \
-              --report-file reports/pmd-results.csv
           fi
 
-          echo "📄 PMD output:"
-          cat reports/pmd-results.csv || echo "⚠️ No report!"
+          echo "🚀 Running PMD scan..."
+          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
 
-          echo "🔎 Checking for violations..."
-          line_count=$(wc -l < reports/pmd-results.csv)
-          if [ "$line_count" -gt 1 ]; then
-            echo "❌ Violations found."
-            exit 1
+          echo "📄 PMD output:"
+          cat reports/pmd-results.csv || echo "⚠️ No report generated!"
+
+      - name: Set PMD result output
+        id: set-result
+        run: |
+          if [ -f reports/pmd-results.csv ] && [ $(wc -l < reports/pmd-results.csv) -gt 1 ]; then
+            echo "status=failure" >> $GITHUB_OUTPUT
           else
-            echo "✅ No violations."
+            echo "status=success" >> $GITHUB_OUTPUT
           fi
 
       - name: Upload PMD report
@@ -82,11 +77,14 @@ jobs:
   deploy-prod-jwt:
     needs: pmd-run
     runs-on: ubuntu-latest
-    if: |
+    if: >
       github.event.inputs.environment == 'integrate-sandbox' &&
       (
         github.event.inputs.pmdRequired == 'false' ||
-        (github.event.inputs.pmdRequired == 'true' && needs.pmd-run.result == 'success')
+        (
+          github.event.inputs.pmdRequired == 'true' &&
+          needs.pmd-run.outputs.pmd_status == 'success'
+        )
       )
     steps:
       - uses: actions/checkout@v3
