--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Manual Workflow Deploy
+name: Manual Workflow Deploy + PR Check
 
 on:
   workflow_dispatch:
@@ -21,6 +21,15 @@ on:
         type: boolean
         default: true
 
+  pull_request:
+    paths:
+      - 'force-app/**'
+      - 'pmd/**'
+    branches:
+      - main
+      - develop
+      - release/**
+
 jobs:
   pmd-run:
     runs-on: ubuntu-latest
@@ -38,25 +47,22 @@ jobs:
           mv ~/pmd-bin-$PMD_VERSION ~/pmd
           ~/pmd/bin/run.sh pmd --version
 
-      - name: Run PMD scan and fail on violations
+      - name: Run PMD scan
         id: pmd-scan
         run: |
           mkdir -p reports
           echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
 
-          echo "Checking for source files to analyze..."
+          echo "🔍 Checking for Apex files..."
           if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-            echo "No .cls files found in ./force-app/main/default/classes"
+            echo "⚠️ No .cls files found"
           else
-            echo "Found Apex files:"
+            echo "✅ Apex files found:"
             find ./force-app/main/default/classes -type f -name '*.cls'
           fi
 
-          echo "Running PMD scan..."
+          echo "🚀 Running PMD..."
           ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
-
-          echo "PMD output:"
-          cat reports/pmd-results.csv || echo "No report generated!"
 
       - name: Set PMD result output
         id: set-result
@@ -78,6 +84,7 @@ jobs:
     needs: pmd-run
     runs-on: ubuntu-latest
     if: >
+      github.event_name == 'workflow_dispatch' &&
       github.event.inputs.environment == 'integrate-sandbox' &&
       (
         github.event.inputs.pmdRequired == 'false' ||
@@ -89,7 +96,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Node (optional)
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "18"
