--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ on:
       - 'pmd/**'
     branches:
       - main
+      - master
       - develop
       - release/**
 
@@ -53,15 +54,15 @@ jobs:
           mkdir -p reports
           echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
 
-          echo "🔍 Checking for Apex files..."
+          echo "Checking for Apex files..."
           if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-            echo "⚠️ No .cls files found"
+            echo "No .cls files found"
           else
-            echo "✅ Apex files found:"
+            echo "Apex files found:"
             find ./force-app/main/default/classes -type f -name '*.cls'
           fi
 
-          echo "🚀 Running PMD..."
+          echo "Running PMD..."
           ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
 
       - name: Set PMD result output
