set pmd default value

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ on:
       pmdRequired:
         description: 'Block deployment if PMD fails'
         type: boolean
-        default: true
+        default: false
 
   pull_request:
     paths:
