--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,7 @@
-name: Manual Workflow Deploy + PR Check
+name: Deploy Pipeline
 
 on:
   workflow_dispatch:
-    inputs:
-      environment:
-        type: choice
-        description: Which environment to deploy to
-        options:
-          - integrate-sandbox
-          - uat-partial-sandbox
-          - production
-        default: 'integrate-sandbox'
-        required: true
-      validateOnly:
-        description: 'Run the deployment as validation only'
-        type: boolean
-        default: false
-      pmdRequired:
-        description: 'Block deployment if PMD fails'
-        type: boolean
-        default: false
-
-  pull_request:
-    paths:
-      - 'force-app/**'
-      - 'pmd/**'
-    branches:
-      - main
-      - master
-      - develop
-      - release/**
 
 jobs:
   pmd-run:
@@ -53,14 +25,7 @@ jobs:
         run: |
           mkdir -p reports
           echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
-
-          if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
-            echo "No .cls files found"
-          else
-            find ./force-app/main/default/classes -type f -name '*.cls'
-          fi
-
-          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
+          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/pmd-ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD scan completed"
 
       - name: Set PMD result output
         id: set-result
@@ -78,39 +43,15 @@ jobs:
           name: pmd-report
           path: reports/pmd-results.csv
 
-  wait-approval:
-    if: github.event_name == 'workflow_dispatch'
+  deploy-integrate:
     needs: pmd-run
     runs-on: ubuntu-latest
-    environment:
-      name: ${{ github.event.inputs.environment }}
+    if: needs.pmd-run.outputs.pmd_status == 'success'
     steps:
-      - name: Wait for manual approval before deploying to ${{ github.event.inputs.environment }}
-        run: echo "Approved to deploy"
+      - name: Checkout source
+        uses: actions/checkout@v3
 
-  deploy-integrate:
-    needs: [pmd-run, wait-approval]
-    if: >
-      github.event_name == 'workflow_dispatch' &&
-      github.event.inputs.environment == 'integrate-sandbox' &&
-      (
-        github.event.inputs.pmdRequired == 'false' ||
-        (
-          github.event.inputs.pmdRequired == 'true' &&
-          needs.pmd-run.outputs.pmd_status == 'success'
-        )
-      )
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup and Deploy to Integrate
-        run: echo "Deploying to Integrate..."
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-
-      - name: Install Salesforce CLI
+      - name: Setup CLI
         run: |
           wget https://developer.salesforce.com/media/salesforce-cli/sfdx/channels/stable/sfdx-linux-x64.tar.xz
           mkdir ~/sfdx
@@ -118,13 +59,13 @@ jobs:
           echo "$HOME/sfdx/bin" >> $GITHUB_PATH
           ~/sfdx/bin/sfdx version
 
-      - name: Create JWT key file
+      - name: Create JWT key
         run: |
           mkdir -p JWT
           echo "${{ secrets.SFDC_AUTH_KEY }}" > JWT/server.key
           chmod 600 JWT/server.key
 
-      - name: Deploy via JWT to Sandbox
+      - name: Deploy to Integrate
         uses: ./.github/actions/deploy-environment
         with:
           instanceUrl: https://login.salesforce.com
@@ -134,32 +75,25 @@ jobs:
           alias: aliasTestCICDOrg
           manifestPath: manifest/package.xml
           testsToRunFile: specifiedTestsClass/testsToRun.txt
-          validateOnly: ${{ github.event.inputs.validateOnly }}
+          validateOnly: false
 
+  approve-uat:
+    needs: deploy-integrate
+    runs-on: ubuntu-latest
+    environment:
+      name: uat-partial-sandbox
+      url: https://test.salesforce.com
+    steps:
+      - name: Wait for UAT approval
+        run: echo "UAT deployment manually approved."
 
   deploy-uat:
-    needs: [pmd-run, wait-approval]
-    if: >
-      github.event_name == 'workflow_dispatch' &&
-      github.event.inputs.environment == 'uat-partial-sandbox' &&
-      (
-        github.event.inputs.pmdRequired == 'false' ||
-        (
-          github.event.inputs.pmdRequired == 'true' &&
-          needs.pmd-run.outputs.pmd_status == 'success'
-        )
-      )
+    needs: approve-uat
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup and Deploy to UAT
-        run: echo "Deploying to UAT..."
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
 
-      - name: Install Salesforce CLI
+      - name: Setup CLI
         run: |
           wget https://developer.salesforce.com/media/salesforce-cli/sfdx/channels/stable/sfdx-linux-x64.tar.xz
           mkdir ~/sfdx
@@ -167,13 +101,13 @@ jobs:
           echo "$HOME/sfdx/bin" >> $GITHUB_PATH
           ~/sfdx/bin/sfdx version
 
-      - name: Create JWT key file
+      - name: Create JWT key
         run: |
           mkdir -p JWT
           echo "${{ secrets.SFDC_AUTH_KEY }}" > JWT/server.key
           chmod 600 JWT/server.key
 
-      - name: Deploy via JWT to Sandbox
+      - name: Deploy to UAT
         uses: ./.github/actions/deploy-environment
         with:
           instanceUrl: https://login.salesforce.com
@@ -183,32 +117,25 @@ jobs:
           alias: aliasTestCICDOrg
           manifestPath: manifest/package.xml
           testsToRunFile: specifiedTestsClass/testsToRun.txt
-          validateOnly: ${{ github.event.inputs.validateOnly }}
+          validateOnly: false
 
+  approve-prod:
+    needs: deploy-uat
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://login.salesforce.com
+    steps:
+      - name: Wait for Production approval
+        run: echo "Production deployment manually approved."
 
   deploy-prod:
-    needs: [pmd-run, wait-approval]
-    if: >
-      github.event_name == 'workflow_dispatch' &&
-      github.event.inputs.environment == 'production' &&
-      (
-        github.event.inputs.pmdRequired == 'false' ||
-        (
-          github.event.inputs.pmdRequired == 'true' &&
-          needs.pmd-run.outputs.pmd_status == 'success'
-        )
-      )
+    needs: approve-prod
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup and Deploy to Production
-        run: echo "Deploying to Production..."
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
 
-      - name: Install Salesforce CLI
+      - name: Setup CLI
         run: |
           wget https://developer.salesforce.com/media/salesforce-cli/sfdx/channels/stable/sfdx-linux-x64.tar.xz
           mkdir ~/sfdx
@@ -216,13 +143,13 @@ jobs:
           echo "$HOME/sfdx/bin" >> $GITHUB_PATH
           ~/sfdx/bin/sfdx version
 
-      - name: Create JWT key file
+      - name: Create JWT key
         run: |
           mkdir -p JWT
           echo "${{ secrets.SFDC_AUTH_KEY }}" > JWT/server.key
           chmod 600 JWT/server.key
 
-      - name: Deploy via JWT to Sandbox
+      - name: Deploy to Production
         uses: ./.github/actions/deploy-environment
         with:
           instanceUrl: https://login.salesforce.com
@@ -232,5 +159,4 @@ jobs:
           alias: aliasTestCICDOrg
           manifestPath: manifest/package.xml
           testsToRunFile: specifiedTestsClass/testsToRun.txt
-          validateOnly: ${{ github.event.inputs.validateOnly }}
-
+          validateOnly: false
