--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -150,7 +150,7 @@ jobs:
     needs: [pmd-run, wait-approval, deploy-integrate, wait-uat-approval]
     if: >
       github.event_name == 'workflow_dispatch' &&
-      github.event.inputs.environment == 'uat-partial-sandbox' &&
+      # github.event.inputs.environment == 'uat-partial-sandbox' &&
       (
         github.event.inputs.pmdRequired == 'false' ||
         (
