--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -192,7 +192,7 @@ jobs:
 
 
   deploy-prod:
-    needs: [pmd-run, wait-approval]
+    needs: [pmd-run, wait-approval, deploy-integrate, wait-uat-approval, deploy-uat]
     if: >
       github.event_name == 'workflow_dispatch' &&
       github.event.inputs.environment == 'production' &&
