--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -147,7 +147,7 @@ jobs:
           run: echo "Approved to deploy"
 
   deploy-uat:
-    needs: [pmd-run, wait-approval, deploy-integrate, wait-uat-approval]
+    needs: [pmd-run, wait-uat-approval]
     if: >
       github.event.inputs.pmdRequired == 'false' ||
         (
@@ -192,7 +192,7 @@ jobs:
 
 
   deploy-prod:
-    needs: [pmd-run, wait-approval, deploy-integrate, wait-uat-approval, deploy-uat]
+    needs: [deploy-uat]
     if: >
       github.event_name == 'workflow_dispatch' &&
       github.event.inputs.environment == 'production' &&
